--- a/prd/nginx/conf.d/default.conf
+++ b/prd/nginx/conf.d/default.conf
@@ -4,7 +4,7 @@ upstream unicorn {
 
 server {
   listen 80 default_server;
-  server_name  [api.golfdorone.tech];
+  server_name  [api.golf-dorone.com];
   root  /usr/share/nginx/html;
   try_files  $uri/index.html $uri @unicorn;
 
