--- a/prd/Dockerfile
+++ b/prd/Dockerfile
@@ -10,7 +10,7 @@ COPY Gemfile /app/Gemfile
 COPY Gemfile.lock /app/Gemfile.lock
 RUN gem install bundler
 RUN bundle install --without test development
-ADD . /app
+COPY . /app
 EXPOSE 3000
 
-CMD ["/bin/sh", "-c", "bundle exec rails db:create & bundle exec rails db:migrate && bundle exec unicorn -p 3000 -c /app/config/unicorn.rb -E production"]
+CMD ["/bin/sh", "-c", "bundle exec rails db:migrate && bundle exec unicorn -p 3000 -c /app/config/unicorn.rb -E production"]
