--- a/prd/Dockerfile
+++ b/prd/Dockerfile
@@ -13,4 +13,4 @@ RUN bundle install --without test development
 COPY . /app
 EXPOSE 3000
 
-CMD ["/bin/sh", "-c", "bundle exec rails db:create && bundle exec rails db:migrate && bundle exec unicorn -p 3000 -c /app/config/unicorn.rb -E production"]
+CMD ["/bin/sh", "-c", "bundle exec unicorn -p 3000 -c /app/config/unicorn.rb -E production"]
