--- a/prd/Dockerfile
+++ b/prd/Dockerfile
@@ -11,6 +11,10 @@ COPY Gemfile.lock /app/Gemfile.lock
 RUN gem install bundler
 RUN bundle install --without test development
 COPY . /app
+COPY entrypoint.sh /usr/bin/
+RUN chmod +x /usr/bin/entrypoint.sh
+ENTRYPOINT ["entrypoint.sh"]
+
 EXPOSE 3000
 
 CMD ["/bin/sh", "-c", "bundle exec unicorn -p 3000 -c /app/config/unicorn.rb -E production"]
