--- a/prd/Dockerfile
+++ b/prd/Dockerfile
@@ -17,4 +17,4 @@ ENTRYPOINT ["entrypoint.sh"]
 
 EXPOSE 3000
 
-CMD ["/bin/sh", "-c", "bundle exec unicorn -p 3000 -c /app/config/unicorn.rb -E production"]
+CMD ["rails", "server", "-b", "0.0.0.0"]
